# ibd-digest

./: .gitignore  CLAUDE.md  README.md  check.py  pyproject.toml
Corpus/: 10.1001_jama.2023.15389.md  10.1002_advs.76585.md  10.1002_jmri.29511.md  10.1002_ueg2.12215.md  10.1007_s00261-017-1303-4.md  10.1007_s00261-025-05370-4.md  10.1007_s00261-026-05384-6.md  10.1007_s00261-026-05688-7.md  10.1007_s00330-026-12721-2.md  10.1007_s00330-026-12755-6.md  10.1007_s00330-026-12771-6.md  10.1007_s00330-026-12772-5.md  10.1007_s00431-024-05554-y.md  10.1007_s11096-026-02106-2.md  10.1007_s11894-024-00915-x.md  10.1016_j.cgh.2026.06.033.md  10.1016_j.cgh.2026.06.034.md  10.1016_j.clinimag.2020.03.001.md  10.1016_j.clinre.2026.102885.md  10.1016_j.crad.2019.06.016.md  10.1016_j.dld.2026.04.008.md  10.1016_j.dld.2026.06.001.md  10.1016_j.gastha.2023.06.003.md  10.1016_j.intimp.2026.116965.md  10.1016_s0140-6736(23)00966-2.md  10.1016_s2468-1253(25)00263-8.md  10.1016_s2468-1253(26.md  10.1021_acsami.6c03103.md  10.1038_s41390-026-05226-7.md  10.1038_s41591-026-04570-9.md  10.1038_s41597-025-04760-z.md  10.1038_s41598-026-61345-5.md  10.1038_s41746-026-02941-7.md  10.1038_s41746-026-02953-3.md  10.1038_s41746-026-02987-7.md  10.1038_s41746-026-02992-w.md  10.1038_s41746-026-02994-8.md  10.1038_s41746-026-03000-x.md  10.1038_s41746-026-03041-2.md  10.1038_s42003-026-10594-1.md  (+73 more)
Inbox/: To Read.md
data/: metrics.txt  papers.db  score_history.txt  seen_dois.txt
lineage/: dossier.py  embed.py  flow.py  forward.py  merge.py  openalex.py  prune.py  render.py  resolve.py  select.py  (+3 more)
(+121 files in other folders)
