[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibd-digest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "torch>=2.0",
    "transformers>=4.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
